--- a/public/chat.html
+++ b/public/chat.html
@@ -13,12 +13,10 @@
 
 <body>
   <div class="topbar">
-    <div class="menu">Menu</div>
-    <div class="text">Room</div>
+    <div class="menu"></div>
     <div class="location" id="send-location"><img width="40px" height="40px" src="./icons8-location-64.png" alt="" srcset=""></div>
   </div>
   <div class="menuwrapper">
-    <div class="close">X</div>
     <div class="chat__sidebar">
       <h3>People</h3>
       <div class="users"></div>
@@ -26,7 +24,6 @@
   </div>
   <div class="chat">
     <div class="menuwrapper2">
-      <div class="close">X</div>
       <div class="chat__sidebar">
         <h3>People</h3>
         <div class="users"></div>
