location icon to text

--- a/public/chat.html
+++ b/public/chat.html
@@ -7,14 +7,14 @@
   <title>| ChatMate</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
   <link rel="stylesheet" href="/css/styles.css">
-  <link rel="icon" href="/chat.png">
+  <link rel="icon" href="./icons8-chat-64.png">
 
 </head>
 
 <body>
   <div class="topbar">
     <div class="menu"></div>
-    <div class="location" id="send-location"><img width="40px" height="40px" src="./icons8-location-64.png" alt="" srcset=""></div>
+    <div class="location" id="send-location">Share location</div>
   </div>
   <div class="menuwrapper">
     <div class="chat__sidebar">
