--- a/public/chat.html
+++ b/public/chat.html
@@ -3,6 +3,16 @@
 <html>
 
 <head>
+
+  <meta name="theme-color" content="#111d2a" />
+  <!--social media preview tag-->
+  <meta name="title" content="Instant Chatting App"/>
+  <meta name="description" content="This is a temporary instant chatting app where you can chat also in groups. There is no database so any of your chat is not stored. ">
+  <meta property="og:title" content="Instant Chatting App" />
+  <meta property="og:description" content="This is a temporary instant chatting app where you can chat also in groups. There is no database so any of your chat is not stored. ">
+  <meta property="og:image" content="index.png"/>
+
+
   <meta charset="utf-8">
   <title>| ChatMate</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
@@ -17,7 +27,7 @@
   </div>
   <div class="menuwrapper">
     <div class="chat__sidebar">
-      <h3>People</h3>
+      <h3>Active People(s)</h3>
       <div class="users"></div>
     </div>
   </div>
