--- a/public/chat.html
+++ b/public/chat.html
@@ -27,7 +27,7 @@
   </div>
   <div class="menuwrapper">
     <div class="chat__sidebar">
-      <h3>Active People(s)</h3>
+      <h3>People</h3>
       <div class="users"></div>
     </div>
   </div>
