--- a/public/chat.html
+++ b/public/chat.html
@@ -85,7 +85,7 @@
           <span>{{createdAt}}</span>
         </div>
         <div class="server__message__body">
-          <p>Server: {{text}}</p>
+          <p>{{text}}</p>
         </div>
       </li>
     </script>
