--- a/public/chat.html
+++ b/public/chat.html
@@ -60,7 +60,7 @@
           <h3>{{from}}</h3>
         </div>
         <div class="message__body">
-          <p>{{text}}</p>
+          <div class="avatar">{{firstletter}}</div><p>{{text}}</p>
         </div>
       </li>
     </script>
@@ -91,7 +91,7 @@
     </script>
   
     <script id="location-message-template" type="text/template">
-      <li class="message">
+      <li class="location_message">
         <div class="time">
           <span>{{createdAt}}</span>
         </div>
