--- a/public/chat.html
+++ b/public/chat.html
@@ -95,7 +95,7 @@
         <div class="time">
           <span>{{createdAt}}</span>
         </div>
-        <div class="message__title">
+        <div class="location__message__title">
           <a id="retlocflex" class='tenth before after' href="{{url}}" target="_blank"><img id="retlocation" src="./icons8-place-marker.gif" alt="" srcset="">{{from}}'s location</a>
         </div>
       </li>
