--- a/public/chat.html
+++ b/public/chat.html
@@ -100,6 +100,15 @@
         </div>
       </li>
     </script>
+
+    <script id="is-typing-template" type="text/template">
+      <li class="is-typing">
+        <div class="is-typing__body">
+          <p>{{from}} is typing...</p>
+        </div>
+      </li>
+    </script>
+
   </div>
 
   <script defer src="/socket.io/socket.io.js"></script>
