--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <title>Login</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <link rel="stylesheet" href="/css/styles.css">
-    <link rel="icon" href="./icons8-chat-64.png">
+    <link rel="icon" href="./images/icons8-chat-64.png">
 </head>
 
 <body class="centered-form">
