--- a/public/chat.html
+++ b/public/chat.html
@@ -61,37 +61,29 @@
     
       <script id="message-template" type="text/template">
         <li class="message">
-          <div class="time">
-            <span>{{createdAt}}</span>
-          </div>
           <div class="message__title">
             <h3>{{from}}</h3>
           </div>
           <div class="message__body">
-            <div class="avatar">{{firstletter}}</div><p>{{text}}</p>
+            <div class="avatar">{{firstletter}}</div><p>{{text}}</p><span class='time'>{{createdAt}}</span>
           </div>
         </li>
       </script>
   
       <script id="my-message-template" type="text/template">
         <li class="my__message">
-          <div class="time">
-            <span>{{createdAt}}</span>
-          </div>
           <div class="my__message__title">
-            <h3>(You)</h3>
+            <h3>You</h3>
           </div>
           <div class="my__message__body">
-            <p>{{text}}</p>
+            <span class='time'>{{createdAt}}</span><p>{{text}}</p>
           </div>
         </li>
       </script>
   
       <script id="server-message-template" type="text/template">
         <li class="server__message">
-          <div class="time">
-            <span>{{createdAt}}</span>
-          </div>
+            <span class='time'>{{createdAt}}</span>
           <div class="server__message__body">
             <p>{{text}}</p>
           </div>
@@ -99,10 +91,8 @@
       </script>
     
       <script id="location-message-template" type="text/template">
-        <li class="location_message">
-          <div class="time">
-            <span>{{createdAt}}</span>
-          </div>
+        <li class="location__message">
+          <span class='time'>{{createdAt}}</span>
           <div class="location__message__title">
             <a id="retlocflex" class='tenth before after' href="{{url}}" target="_blank"><img id="retlocation" src="./images/icons8-place-marker.gif" alt="" srcset="">{{from}}'s location</a>
           </div>
