--- a/public/chat.html
+++ b/public/chat.html
@@ -61,7 +61,7 @@
     
       <script id="message-template" type="text/template">
         <li class="message">
-          <div class="message__title">
+          <div class="message__title title">
             <h3>{{from}}</h3>
           </div>
           <div class="message__body">
@@ -72,7 +72,7 @@
   
       <script id="my-message-template" type="text/template">
         <li class="my__message">
-          <div class="my__message__title">
+          <div class="my__message__title title">
             <h3>You</h3>
           </div>
           <div class="my__message__body">
@@ -93,7 +93,7 @@
       <script id="location-message-template" type="text/template">
         <li class="location__message">
           <span class='time'>{{createdAt}}</span>
-          <div class="location__message__title">
+          <div class="location__message__title title">
             <a id="retlocflex" class='tenth before after' href="{{url}}" target="_blank"><img id="retlocation" src="./images/icons8-place-marker.gif" alt="" srcset="">{{from}}'s location</a>
           </div>
         </li>
