--- a/public/chat.html
+++ b/public/chat.html
@@ -47,7 +47,7 @@
       
       <div class="chat__main">
         <ol id="messages" class="chat__messages"></ol>
-        <div id="typingindicator"></div>
+        <ul id="typingindicator"></ul>
         <div class="chat__footer">
           <form id="message-form">
             <!--input name="message" type="text" placeholder="Message" autofocus autocomplete="off" /-->
@@ -98,11 +98,6 @@
           </div>
         </li>
       </template>
-  
-      <template id="is-typing-template" type="text/template">
-            {{users}} is typing...
-      </template>
-  
     </div>
   </div>
 
