--- a/public/chat.html
+++ b/public/chat.html
@@ -22,7 +22,7 @@
 </head>
 
 <body>
-  <div id="preloader" style="z-index: 100; overflow: hidden; visibility: visible;position: absolute;height: 100%;width: 100%;display: flex;flex-direction: row-reverse; background: #111d2a;justify-content: center;align-items: center;">
+  <div id="preloader" style="z-index: 100; overflow: hidden; visibility: visible;position: absolute;height: 100vh;width: 100vw;display: flex;position: fixed; flex-direction: row-reverse; background: #111d2a;justify-content: center;align-items: center;">
     <!--create a preloder screen-->
     <img src="./images/loading.svg" height="80px" width="80px" alt="" srcset="">
     <h3 style="margin: 0;">Connecting to server</h3>
