alert to form error

--- a/public/chat.html
+++ b/public/chat.html
@@ -17,7 +17,7 @@
   <title>| ChatMate</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
   <link rel="stylesheet" href="/css/styles.css">
-  <link rel="icon" href="./icons8-chat-64.png">
+  <link rel="icon" href="./images/icons8-chat-64.png">
 
 </head>
 
