--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <link rel="stylesheet" href="/css/styles.css">
     <link rel="icon" href="./images/icons8-chat-64.png">
+    <script src="./error.js" defer></script>
 </head>
 
 <body class="centered-form">
@@ -14,6 +15,7 @@
         <form action="/chat.html">
             <div class="form-field">
                 <h3>Join a Chat<h3>
+                <div id="error-callback"></div>
             </div>
             <div class="form-field">
                 <label>Display name</label>
