--- a/public/chat.html
+++ b/public/chat.html
@@ -97,16 +97,13 @@
             <h3>{{from}}</h3>
           </div>
           <div class="message__body">
-            <div class="avatar">{{firstletter}}</div><p>{{text}}</p><span class='time'>{{createdAt}}</span>
+            <div class="avatar"><img id="avatar" {{attr}}="{{attrVal}}" height="40px" width="40px" alt="" srcset=""></div><p>{{text}}</p><span class='time'>{{createdAt}}</span>
           </div>
         </li>
       </template>
   
       <template id="my-message-template" type="text/template">
         <li class="my__message">
-          <div class="my__message__title title">
-            <h3>You</h3>
-          </div>
           <div class="my__message__body">
             <span class='time'>{{createdAt}}</span><p>{{text}}</p>
           </div>
