image compression and tooltip and form validation

--- a/public/chat.html
+++ b/public/chat.html
@@ -62,6 +62,7 @@
   <div id="main-screen" style="visibility: hidden;">
     <div class="topbar">
       <div class="menu"></div>
+      <div class="info">?</div>
     </div>
     <div class="menuwrapper">
       <div class="chat__sidebar">
