removed uppecare in form

--- a/public/index.html
+++ b/public/index.html
@@ -59,11 +59,11 @@
                 </div>
                 <div class="form-field">
                     <label for="name">Display name</label>
-                    <input type="text" name="name" style="text-transform:uppercase" autofocus required />
+                    <input type="text" name="name" autofocus required />
                 </div>
                 <div class="form-field">
                     <label for="room">Room name</label>
-                    <input type="text" name="room" style="text-transform:uppercase" required />
+                    <input type="text" name="room" required />
                 </div>
                 <div class="form-field">
                     <button type="submit">Join</button>
