--- a/public/index.html
+++ b/public/index.html
@@ -38,11 +38,11 @@
 
 
 
-    <title>Login</title>
+    <title>Login | PokeTab Messanger</title>
 
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <link rel="stylesheet" href="/css/index.css">
-    <link rel="icon" href="./images/chatmate-pikachu-512(custom).png">
+    <link rel="icon" href="./images/poketab-pikachu-512(custom).png">
     <link rel="manifest" href="manifest.json" crossorigin="use-credentials">
     <script defer src="/js/libs/jquery-3.1.0.min.js"></script>
     <script defer src="./index.js" defer></script>
