--- a/public/chat.html
+++ b/public/chat.html
@@ -45,11 +45,11 @@
 
 
   <meta charset="utf-8">
-  <title>| ChatMate</title>
+  <title>| PokeTab Messanger</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="/css/styles.css">
   <link rel="manifest" href="manifest.json" crossorigin="use-credentials">
-  <link rel="icon" href="./images/chatmate-pikachu-512.png">
+  <link rel="icon" href="./images/pikachu.png">
 
 </head>
 
