--- a/public/index.html
+++ b/public/index.html
@@ -50,7 +50,7 @@
 
 <body class="centered-form">
     <div class="centered-form__form">
-        <form action="/chat.html" autocomplete="off" id="login-form" onsubmit="return(check());">
+        <form action="/chat.html" autocomplete="on" id="login-form" onsubmit="return(check());">
             <div class="form1">
                 <div class="form-field">
                     
