--- a/public/chat.html
+++ b/public/chat.html
@@ -45,7 +45,7 @@
 
 
   <meta charset="utf-8">
-  <title>| PokeTab Messanger</title>
+  <title>Inbox | PokeTab Messanger</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="/css/styles.css">
   <link rel="manifest" href="manifest.json" crossorigin="use-credentials">
