--- a/public/chat.html
+++ b/public/chat.html
@@ -49,7 +49,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="/css/styles.css">
   <link rel="manifest" href="manifest.json" crossorigin="use-credentials">
-  <link rel="icon" href="./images/pikachu.png">
+  <link rel="icon" href="./images/avatars/pikachu.png">
 
 </head>
 
