--- a/public/index.html
+++ b/public/index.html
@@ -62,8 +62,8 @@
                     <input type="text" name="name" autofocus required />
                 </div>
                 <div class="form-field">
-                    <label for="room">Room name</label>
-                    <input type="text" name="room" required />
+                    <label for="key">Key</label>
+                    <input type="text" name="key" required />
                 </div>
                 <div class="form-field">
                     <button type="submit">Join</button>
