--- a/public/index.html
+++ b/public/index.html
@@ -1,112 +1,77 @@
 <!DOCTYPE html>
-<html>
-
+<html lang="en">
 <head>
-    <meta charset="utf-8">
-
-    <meta name="theme-color" content="#111d2a" />
-    <link rel="apple-touch-icon" href="icons/apple-icon-180.png">
-
-    <meta name="apple-mobile-web-app-capable" content="yes">
-
-    <link rel="apple-touch-startup-image" href="icons/apple-splash-2048-2732.jpg" media="(device-width: 1024px) and (device-height: 1366px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)">
-    <link rel="apple-touch-startup-image" href="icons/apple-splash-2732-2048.jpg" media="(device-width: 1024px) and (device-height: 1366px) and (-webkit-device-pixel-ratio: 2) and (orientation: landscape)">
-    <link rel="apple-touch-startup-image" href="icons/apple-splash-1668-2388.jpg" media="(device-width: 834px) and (device-height: 1194px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)">
-    <link rel="apple-touch-startup-image" href="icons/apple-splash-2388-1668.jpg" media="(device-width: 834px) and (device-height: 1194px) and (-webkit-device-pixel-ratio: 2) and (orientation: landscape)">
-    <link rel="apple-touch-startup-image" href="icons/apple-splash-1536-2048.jpg" media="(device-width: 768px) and (device-height: 1024px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)">
-    <link rel="apple-touch-startup-image" href="icons/apple-splash-2048-1536.jpg" media="(device-width: 768px) and (device-height: 1024px) and (-webkit-device-pixel-ratio: 2) and (orientation: landscape)">
-    <link rel="apple-touch-startup-image" href="icons/apple-splash-1668-2224.jpg" media="(device-width: 834px) and (device-height: 1112px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)">
-    <link rel="apple-touch-startup-image" href="icons/apple-splash-2224-1668.jpg" media="(device-width: 834px) and (device-height: 1112px) and (-webkit-device-pixel-ratio: 2) and (orientation: landscape)">
-    <link rel="apple-touch-startup-image" href="icons/apple-splash-1620-2160.jpg" media="(device-width: 810px) and (device-height: 1080px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)">
-    <link rel="apple-touch-startup-image" href="icons/apple-splash-2160-1620.jpg" media="(device-width: 810px) and (device-height: 1080px) and (-webkit-device-pixel-ratio: 2) and (orientation: landscape)">
-    <link rel="apple-touch-startup-image" href="icons/apple-splash-1284-2778.jpg" media="(device-width: 428px) and (device-height: 926px) and (-webkit-device-pixel-ratio: 3) and (orientation: portrait)">
-    <link rel="apple-touch-startup-image" href="icons/apple-splash-2778-1284.jpg" media="(device-width: 428px) and (device-height: 926px) and (-webkit-device-pixel-ratio: 3) and (orientation: landscape)">
-    <link rel="apple-touch-startup-image" href="icons/apple-splash-1170-2532.jpg" media="(device-width: 390px) and (device-height: 844px) and (-webkit-device-pixel-ratio: 3) and (orientation: portrait)">
-    <link rel="apple-touch-startup-image" href="icons/apple-splash-2532-1170.jpg" media="(device-width: 390px) and (device-height: 844px) and (-webkit-device-pixel-ratio: 3) and (orientation: landscape)">
-    <link rel="apple-touch-startup-image" href="icons/apple-splash-1125-2436.jpg" media="(device-width: 375px) and (device-height: 812px) and (-webkit-device-pixel-ratio: 3) and (orientation: portrait)">
-    <link rel="apple-touch-startup-image" href="icons/apple-splash-2436-1125.jpg" media="(device-width: 375px) and (device-height: 812px) and (-webkit-device-pixel-ratio: 3) and (orientation: landscape)">
-    <link rel="apple-touch-startup-image" href="icons/apple-splash-1242-2688.jpg" media="(device-width: 414px) and (device-height: 896px) and (-webkit-device-pixel-ratio: 3) and (orientation: portrait)">
-    <link rel="apple-touch-startup-image" href="icons/apple-splash-2688-1242.jpg" media="(device-width: 414px) and (device-height: 896px) and (-webkit-device-pixel-ratio: 3) and (orientation: landscape)">
-    <link rel="apple-touch-startup-image" href="icons/apple-splash-828-1792.jpg" media="(device-width: 414px) and (device-height: 896px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)">
-    <link rel="apple-touch-startup-image" href="icons/apple-splash-1792-828.jpg" media="(device-width: 414px) and (device-height: 896px) and (-webkit-device-pixel-ratio: 2) and (orientation: landscape)">
-    <link rel="apple-touch-startup-image" href="icons/apple-splash-1242-2208.jpg" media="(device-width: 414px) and (device-height: 736px) and (-webkit-device-pixel-ratio: 3) and (orientation: portrait)">
-    <link rel="apple-touch-startup-image" href="icons/apple-splash-2208-1242.jpg" media="(device-width: 414px) and (device-height: 736px) and (-webkit-device-pixel-ratio: 3) and (orientation: landscape)">
-    <link rel="apple-touch-startup-image" href="icons/apple-splash-750-1334.jpg" media="(device-width: 375px) and (device-height: 667px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)">
-    <link rel="apple-touch-startup-image" href="icons/apple-splash-1334-750.jpg" media="(device-width: 375px) and (device-height: 667px) and (-webkit-device-pixel-ratio: 2) and (orientation: landscape)">
-    <link rel="apple-touch-startup-image" href="icons/apple-splash-640-1136.jpg" media="(device-width: 320px) and (device-height: 568px) and (-webkit-device-pixel-ratio: 2) and (orientation: portrait)">
-    <link rel="apple-touch-startup-image" href="icons/apple-splash-1136-640.jpg" media="(device-width: 320px) and (device-height: 568px) and (-webkit-device-pixel-ratio: 2) and (orientation: landscape)">
-
-
-
-    <title>Login | PokeTab Messanger</title>
-
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-    <link rel="stylesheet" href="/css/index.css">
-    <link rel="icon" href="./images/avatars/pikachu.png">
-    <link rel="manifest" href="manifest.json" crossorigin="use-credentials">
-    <script defer src="/js/libs/jquery-3.1.0.min.js"></script>
-    <script defer src="./index.js" defer></script>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./css/join.css">
+    <title>Join | PokeTab Messanger</title>
 </head>
-
-<body class="centered-form">
-    <div class="centered-form__form">
-        <form action="/chat.html" autocomplete="on" id="login-form" onsubmit="return(check());">
-            <div class="form1">
+<body>
+    <div class="container">
+        <form action="./chat.html" autofocus autocomplete="on" id="form" onsubmit="return check();">
+            <div class="form-1" style="display: block;">
                 <div class="form-field">
-                    
-                    <h3 id="join-title">Join a Chat<img src="./images/avatars/gaming(custom).png" height="40px" width="40px" alt="" srcset=""><h3>
+                    <div class="h3">Join a Chat <img src="./images/avatars/gaming(custom).png" alt="" srcset=""></div>
                     <div id="error-callback"></div>
                 </div>
                 <div class="form-field">
-                    <label for="name">Display name</label>
-                    <input type="text" name="name" autofocus required />
+                    <label for="key" id="key-label">Enter Join Key</label>
+                    <input type="text" name="key" id="key">
                 </div>
                 <div class="form-field">
-                    <label for="key">Key</label>
-                    <input type="text" name="key" required />
-                </div>
-                <div class="form-field">
-                    <button type="submit">Join</button>
+                    <input type="button" value="Next" id="next">
                 </div>
             </div>
-            <div class="form2">
-                <div class="avatars">
-                    <!--load avatar images-->
-                    <input type="radio" name="avatar" value="bellsprout" id="av1">
-                    <label for="av1"><img src="./images/avatars/bellsprout(custom).png" alt="" srcset=""></label>
-                    <input type="radio" name="avatar" value="bullbasaur" id="av2">
-                    <label for="av2"><img src="./images/avatars/bullbasaur(custom).png" alt="" srcset=""></label>
-                    <input type="radio" name="avatar" value="caterpie" id="av3">
-                    <label for="av3"><img src="./images/avatars/caterpie(custom).png" alt="" srcset=""></label>
-                    <input type="radio" name="avatar" value="charmander" id="av4">
-                    <label for="av4"><img src="./images/avatars/charmander(custom).png" alt="" srcset=""></label>
-                    <input type="radio" name="avatar" value="eevee" id="av5">
-                    <label for="av5"><img src="./images/avatars/eevee(custom).png" alt="" srcset=""></label>
-                    <input type="radio" name="avatar" value="jigglypuff" id="av6">
-                    <label for="av6"><img src="./images/avatars/jigglypuff(custom).png" alt="" srcset=""></label>
-                    <input type="radio" name="avatar" value="mankey" id="av7">
-                    <label for="av7"><img src="./images/avatars/mankey(custom).png" alt="" srcset=""></label>
-                    <input type="radio" name="avatar" value="meowth" id="av8">
-                    <label for="av8"><img src="./images/avatars/meowth(custom).png" alt="" srcset=""></label>
-                    <input type="radio" name="avatar" value="mew" id="av9">
-                    <label for="av9"><img src="./images/avatars/mew(custom).png" alt="" srcset=""></label>
-                    <input type="radio" name="avatar" value="pidgey" id="av10">
-                    <label for="av10"><img src="./images/avatars/pidgey(custom).png" alt="" srcset=""></label>
-                    <input type="radio" name="avatar" value="pikachu" id="av11">
-                    <label for="av11"><img src="./images/avatars/pikachu(custom).png" alt="" srcset=""></label>
-                    <input type="radio" name="avatar" value="psyduck" id="av12">
-                    <label for="av12"><img src="./images/avatars/psyduck(custom).png" alt="" srcset=""></label>
-                    <input type="radio" name="avatar" value="rattata" id="av13">
-                    <label for="av13"><img src="./images/avatars/rattata(custom).png" alt="" srcset=""></label>
-                    <input type="radio" name="avatar" value="snorlax" id="av14">
-                    <label for="av14"><img src="./images/avatars/snorlax(custom).png" alt="" srcset=""></label>
-                    <input type="radio" name="avatar" value="squirtle" id="av15">
-                    <label for="av15"><img src="./images/avatars/squirtle(custom).png" alt="" srcset=""></label>
-                    <input type="radio" name="avatar" value="zubat" id="av16">
-                    <label for="av16"><img src="./images/avatars/zubat(custom).png" alt="" srcset=""></label>
+            <div class="form-2" style="display: none;">
+                <div class="form-field">
+                    <label for="name"  id="name-label">Your name</label>
+                    <input type="text" name="name" id="name">
+                </div>
+                <div class="form-field">
+                    <div class="avatars">
+                    <input type="radio" name="avatar" value="bellsprout" id="bellsprout">
+                    <label for="bellsprout"><img src="./images/avatars/bellsprout(custom).png" alt="" srcset=""></label>
+                    <input type="radio" name="avatar" value="bullbasaur" id="bullbasaur">
+                    <label for="bullbasaur"><img src="./images/avatars/bullbasaur(custom).png" alt="" srcset=""></label>
+                    <input type="radio" name="avatar" value="caterpie" id="caterpie">
+                    <label for="caterpie"><img src="./images/avatars/caterpie(custom).png" alt="" srcset=""></label>
+                    <input type="radio" name="avatar" value="charmander" id="charmander">
+                    <label for="charmander"><img src="./images/avatars/charmander(custom).png" alt="" srcset=""></label>
+                    <input type="radio" name="avatar" value="eevee" id="eevee">
+                    <label for="eevee"><img src="./images/avatars/eevee(custom).png" alt="" srcset=""></label>
+                    <input type="radio" name="avatar" value="jigglypuff" id="jigglypuff">
+                    <label for="jigglypuff"><img src="./images/avatars/jigglypuff(custom).png" alt="" srcset=""></label>
+                    <input type="radio" name="avatar" value="mankey" id="mankey">
+                    <label for="mankey"><img src="./images/avatars/mankey(custom).png" alt="" srcset=""></label>
+                    <input type="radio" name="avatar" value="meowth" id="meowth">
+                    <label for="meowth"><img src="./images/avatars/meowth(custom).png" alt="" srcset=""></label>
+                    <input type="radio" name="avatar" value="mew" id="mew">
+                    <label for="mew"><img src="./images/avatars/mew(custom).png" alt="" srcset=""></label>
+                    <input type="radio" name="avatar" value="pidgey" id="pidgey">
+                    <label for="pidgey"><img src="./images/avatars/pidgey(custom).png" alt="" srcset=""></label>
+                    <input type="radio" name="avatar" value="pikachu" id="pikachu">
+                    <label for="pikachu"><img src="./images/avatars/pikachu(custom).png" alt="" srcset=""></label>
+                    <input type="radio" name="avatar" value="psyduck" id="psyduck">
+                    <label for="psyduck"><img src="./images/avatars/psyduck(custom).png" alt="" srcset=""></label>
+                    <input type="radio" name="avatar" value="rattata" id="rattata">
+                    <label for="rattata"><img src="./images/avatars/rattata(custom).png" alt="" srcset=""></label>
+                    <input type="radio" name="avatar" value="rattata" id="snorlax">
+                    <label for="rattata"><img src="./images/avatars/snorlax(custom).png" alt="" srcset=""></label>
+                    <input type="radio" name="avatar" value="squirtle" id="squirtle">
+                    <label for="squirtle"><img src="./images/avatars/squirtle(custom).png" alt="" srcset=""></label>
+                    <input type="radio" name="avatar" value="zubat" id="zubat">
+                    <label for="zubat"><img src="./images/avatars/zubat(custom).png" alt="" srcset=""></label>
+                    </div>
+                </div>
+                <div class="form-field">
+                    <input type="submit" value="Join" id="join">
                 </div>
             </div>
         </form>
     </div>
+    <script defer src="/socket.io/socket.io.js"></script>
+    <script defer src="./js/libs/jquery-3.1.0.min.js"></script>
+    <script defer src="./index.js"></script>
 </body>
 </html>
