experimental-video-call

--- a/public/chat.html
+++ b/public/chat.html
@@ -132,7 +132,10 @@
       </template>
     </div>
   </div>
-
+  <div id="video-grid">
+    <div id="my-video"></video></div>
+    <div id="incoming"></video></div>
+  </div>
   <script defer src="/socket.io/socket.io.js"></script>
   <script defer src="/js/libs/jquery-3.1.0.min.js"></script>
   <script defer src="/js/libs/moment.js"></script>
