--- a/public/chat.html
+++ b/public/chat.html
@@ -132,6 +132,9 @@
       </template>
     </div>
   </div>
+  <button id="call">
+    Call
+  </button>
   <div id="video-grid">
     <div id="my-video"></video></div>
     <div id="incoming"></video></div>
