--- a/public/chat.html
+++ b/public/chat.html
@@ -46,7 +46,7 @@
 
   <meta charset="utf-8">
   <title>Inbox | PokeTab Messanger</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=0">
   <link rel="stylesheet" href="/css/styles.css">
   <link rel="manifest" href="manifest.json" crossorigin="use-credentials">
   <link rel="icon" href="./images/avatars/pikachu.png">
