--- a/public/index.html
+++ b/public/index.html
@@ -109,33 +109,33 @@
                     <input type="radio" name="avatar" value="zubat" id="zubat">
                     <label for="zubat"><img src="./images/avatars/zubat(custom).png" alt="" srcset=""></label>
                     <input type="radio" name="avatar" value="arceus" id="arceus">
-                    <label for="arceus"><img src="./images/avatars/arceus.png" alt="" srcset=""></label>
+                    <label for="arceus"><img src="./images/avatars/arceus(custom).png" alt="" srcset=""></label>
                     <input type="radio" name="avatar" value="zubat" id="articuno">
-                    <label for="articuno"><img src="./images/avatars/articuno.png" alt="" srcset=""></label>
+                    <label for="articuno"><img src="./images/avatars/articuno(custom).png" alt="" srcset=""></label>
                     <input type="radio" name="avatar" value="blastoise" id="blastoise">
-                    <label for="blastoise"><img src="./images/avatars/blastoise.png" alt="" srcset=""></label>
+                    <label for="blastoise"><img src="./images/avatars/blastoise(custom).png" alt="" srcset=""></label>
                     <input type="radio" name="avatar" value="bulbasaur2" id="bulbasaur2">
-                    <label for="bulbasaur2"><img src="./images/avatars/bulbasaur2.png" alt="" srcset=""></label>
+                    <label for="bulbasaur2"><img src="./images/avatars/bulbasaur2(custom).png" alt="" srcset=""></label>
                     <input type="radio" name="avatar" value="charizard" id="charizard">
-                    <label for="charizard"><img src="./images/avatars/charizard.png" alt="" srcset=""></label>
+                    <label for="charizard"><img src="./images/avatars/charizard(custom).png" alt="" srcset=""></label>
                     <input type="radio" name="avatar" value="charmander2" id="charmander2">
-                    <label for="charmander2"><img src="./images/avatars/charmander2.png" alt="" srcset=""></label>
+                    <label for="charmander2"><img src="./images/avatars/charmander2(custom).png" alt="" srcset=""></label>
                     <input type="radio" name="avatar" value="haunter" id="haunter">
-                    <label for="haunter"><img src="./images/avatars/haunter.png" alt="" srcset=""></label>
+                    <label for="haunter"><img src="./images/avatars/haunter(custom).png" alt="" srcset=""></label>
                     <input type="radio" name="avatar" value="ivysaur" id="ivysaur">
-                    <label for="ivysaur"><img src="./images/avatars/ivysaur.png" alt="" srcset=""></label>
+                    <label for="ivysaur"><img src="./images/avatars/ivysaur(custom).png" alt="" srcset=""></label>
                     <input type="radio" name="avatar" value="mewtwo" id="mewtwo">
-                    <label for="mewtwo"><img src="./images/avatars/mewtwo.png" alt="" srcset=""></label>
+                    <label for="mewtwo"><img src="./images/avatars/mewtwo(custom).png" alt="" srcset=""></label>
                     <input type="radio" name="avatar" value="palkia" id="palkia">
-                    <label for="palkia"><img src="./images/avatars/palkia.png" alt="" srcset=""></label>
+                    <label for="palkia"><img src="./images/avatars/palkia(custom).png" alt="" srcset=""></label>
                     <input type="radio" name="avatar" value="pichu" id="pichu">
-                    <label for="pichu"><img src="./images/avatars/pichu.png" alt="" srcset=""></label>
+                    <label for="pichu"><img src="./images/avatars/pichu(custom).png" alt="" srcset=""></label>
                     <input type="radio" name="avatar" value="raichu" id="raichu">
-                    <label for="raichu"><img src="./images/avatars/raichu.png" alt="" srcset=""></label>
+                    <label for="raichu"><img src="./images/avatars/raichu(custom).png" alt="" srcset=""></label>
                     <input type="radio" name="avatar" value="rayquaza" id="rayquaza">
-                    <label for="rayquaza"><img src="./images/avatars/rayquaza.png" alt="" srcset=""></label>
+                    <label for="rayquaza"><img src="./images/avatars/rayquaza(custom).png" alt="" srcset=""></label>
                     <input type="radio" name="avatar" value="squirtle2" id="squirtle2">
-                    <label for="squirtle2"><img src="./images/avatars/squirtle2.png" alt="" srcset=""></label>
+                    <label for="squirtle2"><img src="./images/avatars/squirtle2(custom).png" alt="" srcset=""></label>
                 </div>
                 </div>
                 <div class="form-field">
