--- a/public/index.html
+++ b/public/index.html
@@ -58,7 +58,7 @@
         <form action="./chat.html" autofocus autocomplete="on" id="form" onsubmit="return check();">
             <div class="form-1" style="display: block;">
                 <div class="form-field">
-                    <div class="h3">Join a Chat <img src="./images/avatars/gaming(custom).png" alt="" srcset=""></div>
+                    <div class="h3">Join a Chat <img src="./images/pokeball.png" alt="" srcset=""></div>
                     <div id="error-callback"></div>
                 </div>
                 <div class="form-field">
