white to silver

--- a/public/chat.html
+++ b/public/chat.html
@@ -112,7 +112,7 @@
           <div class="avatar"><img id="avatar" src="{{attrVal}}" height="40px" width="40px" alt="" srcset=""></div>
           <div class="message__body">
             <div class="message__title title" {{attr}}="{{messageTitleStyle}}"><h3>{{from}}{{{repIcon}}}</h3></div>
-            <div class="reply-message replyMessage" {{attr}}="{{replyMessageStyle}}"><a href="#{{RepId}}" style="color: white;">{{reply}}</a></div>
+            <div class="reply-message replyMessage" {{attr}}="{{replyMessageStyle}}"><a href="#{{RepId}}" style="color: silver;">{{reply}}</a></div>
             <div class="main-message">
               <p class="textMessage">{{text}}</p>
               <span class='time'>{{createdAt}}</span>
@@ -127,7 +127,7 @@
           <!--div class="avatar"><img id="avatar" {{attr}}="{{attrVal}}" height="40px" width="40px" alt="" srcset=""></-div-->
           <div class="my__message__body">
             <div class="my__message__title title" {{attr}}="{{messageTitleStyle}}"><h3>{{{repIcon}}}{{from}}</h3></div>
-            <div class="my-reply-message replyMessage" {{attr}}="{{replyMessageStyle}}"><a href="#{{RepId}}" style="color: white;">{{reply}}</a></div>
+            <div class="my-reply-message replyMessage" {{attr}}="{{replyMessageStyle}}"><a href="#{{RepId}}" style="color: silver;">{{reply}}</a></div>
             <div class="main-message">
               <span class='time'>{{createdAt}}</span>
               <p class="textMessage">{{text}}</p>
