--- a/public/chat.html
+++ b/public/chat.html
@@ -96,6 +96,7 @@
           <div class="toast-popup-close">×</div>
         </div>
         <ul id="typingindicator"></ul>
+        <div class="popup-message" style="display: none;"></div>
         <div class="chat__footer">
           <form id="message-form">
             <!--input name="message" type="text" placeholder="Message" autofocus autocomplete="off" /-->
