typing to avatar typing

--- a/public/chat.html
+++ b/public/chat.html
@@ -57,7 +57,7 @@
   <div id="preloader" style="z-index: 100; overflow: hidden; visibility: visible; position: absolute;height: 100vh;width: 100vw;display: flex;position: fixed; flex-direction: column; background: #111d2a;justify-content: center;align-items: center;">
     <!--create a preloder screen-->
     <img src="./images/loader.gif" height="100px" width="100px" alt="" srcset="">
-    <h3 style="margin: 0;">Connecting to server</h3>
+    <h3 style="margin: 0; font-size: 1.3rem;">Connecting to server</h3>
   </div>
   <div id="main-screen" style="visibility: hidden;">
     <div class="topbar">
@@ -152,6 +152,23 @@
           <span class='time'>{{createdAt}}</span>
           <div class="location__message__title title">
             <a id="retlocflex" class='tenth before after' href="{{url}}" target="_blank"><img id="retlocation" src="./images/icons8-place-marker.gif" alt="" srcset="">{{from}}'s location</a>
+          </div>
+        </li>
+      </template>
+      <template id="typing-template">
+        <li>
+          <div class="avatar"><img id="avatar" src="{{attrVal}}" height="40px" width="40px" alt="" srcset=""></div>
+          <div class="message__body">
+            <div class="title"><h3>{{from}}</h3></div>
+            <div class="main-message">
+                <div class="ticontainer">
+                <div class="tiblock">
+                  <div class="tidot"></div>
+                  <div class="tidot"></div>
+                  <div class="tidot"></div>
+                </div>
+              </div>
+            </div>
           </div>
         </li>
       </template>
