--- a/public/chat.html
+++ b/public/chat.html
@@ -95,7 +95,8 @@
           </div>
           <div class="toast-popup-close">×</div>
         </div>
-        <ul id="typingindicator"></ul>
+        <ul id="typingindicator">          
+        </ul>
         <div class="popup-message" style="display: none;"></div>
         <div class="chat__footer">
           <form id="message-form">
