--- a/public/chat.html
+++ b/public/chat.html
@@ -102,7 +102,7 @@
             <div class="location" id="send-location"><img id="sendlocation" height='25px' width="25px" src="./images/icons8-gps-48.png" alt="" srcset=""></div>
             <textarea name="message" id="textbox" placeholder="Type..."></textarea>
             <div class="audio-btn">
-              <img src="./images/mic-on-green.png" height='30px' width="30px" alt="" srcset="">
+              <img src="./images/mic-off-red.png" height='30px' width="30px" alt="" srcset="">
             </div>
             <button class="send"><img src="./images/icons8-send-32.png" alt="" srcset=""></button>
           </form>
