--- a/public/index.html
+++ b/public/index.html
@@ -103,14 +103,14 @@
                     <input type="radio" name="avatar" value="rattata" id="rattata">
                     <label for="rattata"><img src="./images/avatars/rattata(custom).png" alt="" srcset=""></label>
                     <input type="radio" name="avatar" value="snorlax" id="snorlax">
-                    <label for="rattata"><img src="./images/avatars/snorlax(custom).png" alt="" srcset=""></label>
+                    <label for="snorlax"><img src="./images/avatars/snorlax(custom).png" alt="" srcset=""></label>
                     <input type="radio" name="avatar" value="squirtle" id="squirtle">
                     <label for="squirtle"><img src="./images/avatars/squirtle(custom).png" alt="" srcset=""></label>
                     <input type="radio" name="avatar" value="zubat" id="zubat">
                     <label for="zubat"><img src="./images/avatars/zubat(custom).png" alt="" srcset=""></label>
                     <input type="radio" name="avatar" value="arceus" id="arceus">
                     <label for="arceus"><img src="./images/avatars/arceus(custom).png" alt="" srcset=""></label>
-                    <input type="radio" name="avatar" value="zubat" id="articuno">
+                    <input type="radio" name="avatar" value="articuno" id="articuno">
                     <label for="articuno"><img src="./images/avatars/articuno(custom).png" alt="" srcset=""></label>
                     <input type="radio" name="avatar" value="blastoise" id="blastoise">
                     <label for="blastoise"><img src="./images/avatars/blastoise(custom).png" alt="" srcset=""></label>
