--- a/public/index.html
+++ b/public/index.html
@@ -55,7 +55,7 @@
 </head>
 <body>
     <div class="container">
-        <form action="./chat.html" autofocus autocomplete="on" id="form" onsubmit="return check();">
+        <form action="./chat" method="post" autocomplete="on" id="form" onsubmit="return check();">
             <div class="form-1" style="display: block;">
                 <div class="form-field">
                     <div class="h3">Join a Chat <img src="./images/pokeball.png" alt="" srcset=""></div>
